     * Cover fetcher: The UI was improved. Now an icon view is used to display
       results, with an informational sidebar that may show interesting bits
       about an image.
     * Cover fetcher: Added ability to enter custom queries via Yahoo!,
       Google, or Discogs (in addition to Lasf.Fm). Note the source for
       automatic cover fetching is still Last.fm only.

  CHANGES:
     * Magnatune.com store: Added "Home" link to all artist and album pages leading
       to the Magnatune.com front page.
     * Magnatune.com store: Improved Magnatune.com front page.
     * Magnatune.com store: Completely remove option to purhcase single albums as 
       this is no longer supported by Magnatune.com and the API for doing so will
       be disabled in the future.
     * The new file browser now supports "places".
     * Added "up" and "home" buttons to the new filebrowser.
     * Items in the breadcrumb navigation bar are now hidden if there is not enough
       room to show all of them (similar to how it works in Dolphin) (BR 231497)
     * Improved performance (dramatic in some cases) when filtering the Playlist 
       (231185).
     * Remove information that is already displayed elsewhere in the playlist from
       the playlist tooltips.
     * Make showing the playlist tooltips a per playlist layout option.
     * When bookmarking a view in the local collection, also store (and restore)
       the setings for "Show Cover Art" and "Show Years". (BR 230562)
     * Allow moodbar files witout the leading '.' (both .<trackfilename>.mood 
       and <trackfilename>.mood now work) 
     * Change example SQL command for setting up an external database to remove
       (sometimes incorrect) host name and possibly fix some random regression in
       some MySQL versions. (BR 225052)

  BUGFIXES:
     * Fixed Youtube videoclip broken engine due to their recent change.
     * Fixed Wikipedia no loading the css on KDE 4.4 (due to a regression in Qt 4.6.)